add controllers, run main secne

--- a/windowUI/src/fxml/main/app.fxml
+++ b/windowUI/src/fxml/main/app.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
 <ScrollPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
     <content>
@@ -16,16 +18,27 @@
                 <fx:include source="../dynamicSheet/dynamicSheet.fxml" />
             </center>
             <left>
-                <GridPane>
+                <GridPane prefHeight="423.0" prefWidth="175.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <fx:include source="../sheetSetting/sheetSetting.fxml" />
+                        <VBox prefHeight="247.0" prefWidth="180.0" GridPane.columnIndex="0">
+                            <fx:include source="../sheetSetting/sheetSetting.fxml" />
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                        </VBox>
+                        <VBox GridPane.columnIndex="0" GridPane.rowIndex="1">
+                            <fx:include source="../rangeSettings/rangeSetting.fxml" />
+                     <GridPane.margin>
+                        <Insets top="10.0" />
+                     </GridPane.margin>
+                        </VBox>
                     </children>
                 </GridPane>
             </left>
