--- a/windowUI/src/fxml/main/app.fxml
+++ b/windowUI/src/fxml/main/app.fxml
@@ -8,17 +8,17 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appController">
     <content>
         <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1125.0">
             <top>
-                <fx:include source="../headline/headline.fxml" />
+                <fx:include fx:id="headline" source="../headline/headline.fxml" />
             </top>
             <center>
-                <fx:include source="../dynamicSheet/dynamicSheet.fxml" />
+                <fx:include fx:id="dynamicSheet" source="../dynamicSheet/dynamicSheet.fxml" />
             </center>
             <left>
-                <GridPane prefHeight="423.0" prefWidth="175.0">
+                <GridPane fx:id="control" prefHeight="423.0" prefWidth="175.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
