--- a/windowUI/src/fxml/popUpLineSort/LineSort.fxml
+++ b/windowUI/src/fxml/popUpLineSort/LineSort.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LineSortContoller">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@dynamic-sheet-style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.popUpLineSort.LineSortController">
    <content>
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="598.0">
          <children>
@@ -70,7 +70,7 @@
                                  </font>
                               </Label>
                               <ChoiceBox fx:id="columnFilterChooser" disable="true" prefHeight="25.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <Button fx:id="submitFillterEreaBtn" mnemonicParsing="false" text="Submit" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                              <Button fx:id="submitFillterEreaBtn" mnemonicParsing="false" onAction="#submitBtnPressed" text="Submit" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                               <Label prefHeight="20.0" prefWidth="179.0" text="Chosen columns by order:" GridPane.rowIndex="3">
                                  <opaqueInsets>
                                     <Insets left="10.0" />
@@ -98,7 +98,7 @@
                         </GridPane>
                      </children>
                   </AnchorPane>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="253.0" prefWidth="598.0" />
+                  <AnchorPane fx:id="sheetAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="253.0" prefWidth="598.0" />
                </items>
             </SplitPane>
          </children>
