--- a/windowUI/src/fxml/popUpFiltter/Filtter.fxml
+++ b/windowUI/src/fxml/popUpFiltter/Filtter.fxml
@@ -14,25 +14,28 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/22" fx:controller="FiltterContoller">
+<ScrollPane maxHeight="-Infinity" stylesheets="@dynamic-sheet-style.css" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.popUpFiltter.FilterContoller">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="598.0">
          <children>
-            <SplitPane dividerPositions="0.27386934673366836" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0">
+            <SplitPane dividerPositions="0.3492462311557789" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0">
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                      <children>
-                        <GridPane layoutX="-2.0" prefHeight="107.0" prefWidth="600.0">
+                        <GridPane layoutX="-2.0" prefHeight="136.0" prefWidth="600.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.0" minWidth="10.0" prefWidth="227.0" />
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="332.0" minWidth="10.0" prefWidth="244.0" />
                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="212.0" minWidth="10.0" prefWidth="86.0" />
                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="184.0" minWidth="10.0" prefWidth="66.0" />
+                              <ColumnConstraints />
+                              <ColumnConstraints />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
@@ -69,7 +72,7 @@
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <Label prefHeight="20.0" prefWidth="207.0" text="Choose wich value to filtter by:" GridPane.rowIndex="3">
+                              <Label prefHeight="20.0" prefWidth="207.0" text="Choose wich values to filtter by:" GridPane.rowIndex="3">
                                  <padding>
                                     <Insets left="10.0" />
                                  </padding>
@@ -77,14 +80,31 @@
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <ChoiceBox fx:id="columnFilterChooser" prefHeight="25.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <ChoiceBox fx:id="valueToFillterBy" prefHeight="25.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <ChoiceBox fx:id="columnFilterChoser" disable="true" prefHeight="25.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <ChoiceBox fx:id="valueToFillterBy" disable="true" prefHeight="25.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                               <Button fx:id="submitFillterEreaBtn" mnemonicParsing="false" onAction="#submitBtnPressed" text="Submit" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                              <Label prefHeight="20.0" prefWidth="207.0" text="Chosen values:" GridPane.rowIndex="4">
+                                 <padding>
+                                    <Insets left="10.0" />
+                                 </padding>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="choosenValuesShower" prefHeight="20.0" prefWidth="374.0" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="4">
+                                 <padding>
+                                    <Insets left="10.0" />
+                                 </padding>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Button fx:id="startFilterBtn" disable="true" mnemonicParsing="false" onAction="#FilterRange" text="Filter" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                            </children>
                         </GridPane>
                      </children>
                   </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="253.0" prefWidth="598.0" />
+                <AnchorPane fx:id="sheetAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="249.0" prefWidth="598.0" />
               </items>
             </SplitPane>
          </children></AnchorPane>
