--- a/windowUI/src/fxml/main/app.fxml
+++ b/windowUI/src/fxml/main/app.fxml
@@ -39,22 +39,25 @@
                         <VBox prefHeight="247.0" prefWidth="180.0" GridPane.columnIndex="0">
                             <fx:include fx:id="sheetSettings" source="../sheetSetting/sheetSetting.fxml" />
                      <padding>
-                        <Insets left="20.0" />
+                        <Insets left="10.0" />
                      </padding>
                         </VBox>
-                        <VBox prefHeight="76.0" GridPane.rowIndex="2">
+                        <VBox prefHeight="207.0" prefWidth="200.0" GridPane.rowIndex="2">
                             <fx:include fx:id="rangeSettings" source="../rangeSettings/rangeSetting.fxml" />
                      <GridPane.margin>
-                        <Insets top="10.0" />
+                        <Insets top="20.0" />
                      </GridPane.margin>
                         </VBox>
-                     <VBox prefHeight="200.0" GridPane.rowIndex="1">
+                     <VBox maxWidth="80.0" prefHeight="76.0" prefWidth="180.0" GridPane.rowIndex="1">
                         <children>
                            <fx:include fx:id="popUpSorter" source="../sorter/sorter.fxml" />
                         </children>
                         <GridPane.margin>
-                           <Insets left="20.0" />
+                           <Insets left="20.0" top="20.0" />
                         </GridPane.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
                      </VBox>
                     </children>
                 </GridPane>
