--- a/windowUI/src/fxml/sorter/sorter.fxml
+++ b/windowUI/src/fxml/sorter/sorter.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="115.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.sorter.PopUpSorterController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="78.0" prefWidth="115.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.sorter.PopUpSorterController">
    <children>
       <GridPane layoutY="1.0" prefHeight="75.0" prefWidth="100.0">
         <columnConstraints>
@@ -15,10 +15,12 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Button fx:id="sortLineBtn" mnemonicParsing="false" onAction="#handleSortLinePressed" prefHeight="25.0" prefWidth="104.0" text="Sort Lines" />
             <Button fx:id="filtterLineBtn" mnemonicParsing="false" onAction="#HandleFiltterLinePressed" prefHeight="25.0" prefWidth="106.0" text="Filtter Lines" GridPane.rowIndex="1" />
+            <Button fx:id="makeGraphBtn" mnemonicParsing="false" onAction="#HandleFiltterLinePressed" prefHeight="25.0" prefWidth="106.0" text="Make Graph" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </children>
