--- a/windowUI/src/fxml/popUpFiltter/Filtter.fxml
+++ b/windowUI/src/fxml/popUpFiltter/Filtter.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane maxHeight="-Infinity" stylesheets="@dynamic-sheet-style.css" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.popUpFiltter.FilterContoller">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@dynamic-sheet-style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.popUpFiltter.FilterContoller">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="598.0">
          <children>
