--- a/sheetCellClient/src/permissionManger/fxml/ownerPermissionManager/ownerPermissionManager.fxml
+++ b/sheetCellClient/src/permissionManger/fxml/ownerPermissionManager/ownerPermissionManager.fxml
@@ -1,139 +1,141 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
-<fx:root prefHeight="645.0" prefWidth="1099.0" type="VBox" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="permissionManger.fxml.ownerPermissionManager.OwnerManagerController">
-  <children>
-      <GridPane alignment="CENTER" prefHeight="633.0" prefWidth="1099.0" VBox.vgrow="ALWAYS">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints maxHeight="63.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="580.0" minHeight="10.0" prefHeight="558.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-         <children>
-          <SplitPane dividerPositions="0.5779510022271714" focusTraversable="true" prefHeight="622.0" prefWidth="1099.0" GridPane.rowIndex="1">
-            <items>
-                  <ScrollPane prefHeight="545.0" prefWidth="631.0">
-                     <content>
-                    <AnchorPane prefHeight="576.0" prefWidth="485.0">
-                      <children>
-                              <GridPane prefHeight="578.0" prefWidth="631.0">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints maxHeight="293.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
-                                  <RowConstraints maxHeight="560.0" minHeight="10.0" prefHeight="560.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                                 <children>
-                              <Label alignment="CENTER" style="&#10;" text="Pending Requests" textAlignment="CENTER" wrapText="false">
-                                       <font>
-                                          <Font size="18.0" fx:id="x5" />
-                                       </font>
-                                       <textFill>
-                                          <Color red="0.624" green="0.624" blue="0.624" fx:id="x6" />
-                                       </textFill>
-                                       <GridPane.margin>
-                                          <Insets top="5.0" />
-                                       </GridPane.margin>
-                                    </Label>
-                                    <GridPane fx:id="requestsGridPane" GridPane.rowIndex="1">
+<VBox fx:id="root" prefHeight="645.0" prefWidth="1099.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="permissionManger.fxml.ownerPermissionManager.OwnerManagerController">
+    <children>
+        <GridPane alignment="CENTER" prefHeight="633.0" prefWidth="1099.0" VBox.vgrow="ALWAYS">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints maxHeight="63.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="580.0" minHeight="10.0" prefHeight="558.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <SplitPane dividerPositions="0.5779510022271714" focusTraversable="true" prefHeight="622.0" prefWidth="1099.0" GridPane.rowIndex="1">
+                    <items>
+                        <ScrollPane prefHeight="545.0" prefWidth="631.0">
+                            <content>
+                                <AnchorPane prefHeight="576.0" prefWidth="485.0">
+                                    <children>
+                                        <GridPane prefHeight="578.0" prefWidth="631.0">
+                                            <columnConstraints>
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                                <RowConstraints maxHeight="293.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+                                                <RowConstraints maxHeight="560.0" minHeight="10.0" prefHeight="560.0" vgrow="SOMETIMES" />
+                                            </rowConstraints>
+                                            <children>
+                                                <Label alignment="CENTER" style="" text="Pending Requests" textAlignment="CENTER" wrapText="false">
+                                                    <font>
+                                                        <Font size="18.0" />
+                                                    </font>
+                                                    <textFill>
+                                                        <Color red="0.624" green="0.624" blue="0.624" />
+                                                    </textFill>
+                                                    <GridPane.margin>
+                                                        <Insets top="5.0" />
+                                                    </GridPane.margin>
+                                                </Label>
+                                                <GridPane fx:id="requestsGridPane" GridPane.rowIndex="1">
+                                                    <columnConstraints>
+                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="243.0" minWidth="10.0" prefWidth="204.0" />
+                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.0" minWidth="10.0" prefWidth="195.0" />
+                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="10.0" prefWidth="106.0" />
+                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="88.0" />
+                                                    </columnConstraints>
+                                                    <rowConstraints>
+                                                        <RowConstraints maxHeight="270.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
+                                                        <RowConstraints maxHeight="528.0" minHeight="10.0" prefHeight="516.0" vgrow="SOMETIMES" />
+                                                    </rowConstraints>
+                                                    <children>
+                                                        <Label alignment="CENTER" text="User asking permission" textAlignment="CENTER" wrapText="false">
+                                                            <font>
+                                                                <Font size="18.0" />
+                                                            </font>
+                                                            <textFill>
+                                                                <Color red="0.624" green="0.624" blue="0.624" />
+                                                            </textFill>
+                                                        </Label>
+                                                        <Label alignment="CENTER" text="Permission asked" textAlignment="CENTER" wrapText="false" GridPane.columnIndex="1">
+                                                            <font>
+                                                                <Font size="18.0" />
+                                                            </font>
+                                                            <textFill>
+                                                                <Color red="0.624" green="0.624" blue="0.624" />
+                                                            </textFill>
+                                                        </Label>
+                                                        <Label fx:id="sheetName3" alignment="CENTER" textAlignment="CENTER" wrapText="false" GridPane.columnIndex="2">
+                                                            <font>
+                                                                <Font size="18.0" />
+                                                            </font>
+                                                            <textFill>
+                                                                <Color red="0.624" green="0.624" blue="0.624" />
+                                                            </textFill>
+                                                        </Label>
+                                                    </children>
+                                                </GridPane>
+                                            </children>
+                                        </GridPane>
+                                    </children>
+                                </AnchorPane>
+                            </content>
+                        </ScrollPane>
+                        <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
+                            <content>
+                                <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="430.0">
+                                    <children>
+                                        <GridPane layoutX="-1.0" layoutY="-5.0" prefHeight="62.0" prefWidth="429.0">
+                                            <columnConstraints>
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                                <RowConstraints maxHeight="246.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
+                                                <RowConstraints maxHeight="545.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
+                                            </rowConstraints>
+                                            <children>
+                                                <Label alignment="CENTER" text="Sheet Requests History" textAlignment="CENTER" wrapText="false">
+                                                    <font>
+                                                        <Font size="18.0" />
+                                                    </font>
+                                                    <textFill>
+                                                        <Color red="0.624" green="0.624" blue="0.624" />
+                                                    </textFill>
+                                                    <GridPane.margin>
+                                                        <Insets left="5.0" top="5.0" />
+                                                    </GridPane.margin>
+                                                </Label>
+                                    <GridPane fx:id="historyGridPane" prefHeight="17.0" prefWidth="429.0" GridPane.rowIndex="1">
                                       <columnConstraints>
-                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="243.0" minWidth="10.0" prefWidth="204.0" />
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.0" minWidth="10.0" prefWidth="195.0" />
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="10.0" prefWidth="106.0" />
-                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="88.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                       </columnConstraints>
                                       <rowConstraints>
-                                        <RowConstraints maxHeight="270.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
-                                        <RowConstraints maxHeight="528.0" minHeight="10.0" prefHeight="516.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                       </rowConstraints>
-                                       <children>
-                                          <Label alignment="CENTER" style="&#10;" text="User asking permission" textAlignment="CENTER" wrapText="false">
-                                             <font>
-                                                <Font size="18.0" fx:id="x521" />
-                                             </font>
-                                             <textFill>
-                                                <Color red="0.624" green="0.624" blue="0.624" fx:id="x621" />
-                                             </textFill>
-                                          </Label>
-                                          <Label alignment="CENTER" style="&#10;" text="Permission asked" textAlignment="CENTER" wrapText="false" GridPane.columnIndex="1">
-                                             <font>
-                                                <Font size="18.0" fx:id="x522" />
-                                             </font>
-                                             <textFill>
-                                                <Color red="0.624" green="0.624" blue="0.624" fx:id="x622" />
-                                             </textFill>
-                                          </Label>
-                                          <Label fx:id="sheetName3" alignment="CENTER" style="&#10;" textAlignment="CENTER" wrapText="false" GridPane.columnIndex="2">
-                                             <font>
-                                                <Font size="18.0" fx:id="x523" />
-                                             </font>
-                                             <textFill>
-                                                <Color red="0.624" green="0.624" blue="0.624" fx:id="x623" />
-                                             </textFill>
-                                          </Label>
-                                       </children>
                                     </GridPane>
-                                 </children>
-                              </GridPane>
-                      </children>
-                    </AnchorPane>
-                     </content>
-                  </ScrollPane>
-              <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
-                <content>
-                  <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="430.0">
-                    <children>
-                              <GridPane fx:id="historyGridPane" layoutX="-1.0" layoutY="-5.0" prefHeight="578.0" prefWidth="429.0">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints maxHeight="246.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
-                                  <RowConstraints maxHeight="545.0" minHeight="10.0" prefHeight="545.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                                 <children>
-                            <Label alignment="CENTER" style="&#10;" text="Sheet Requests History" textAlignment="CENTER" wrapText="false">
-                                       <font>
-                                  <Font size="18.0" fx:id="x1" />
-                                       </font>
-                                       <textFill>
-                                  <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
-                                       </textFill>
-                                       <GridPane.margin>
-                                          <Insets left="5.0" top="5.0" />
-                                       </GridPane.margin>
-                                    </Label>
-                                 </children>
-                              </GridPane>
-                    </children>
-                  </AnchorPane>
-                </content>
-              </ScrollPane>
-            </items>
-          </SplitPane>
-            <Label fx:id="sheetNameLbl" alignment="TOP_CENTER" contentDisplay="CENTER" style="&#10;" text="Sheet Name" textAlignment="CENTER" wrapText="false">
-               <font>
-                  <Font name="System Bold" size="24.0" fx:id="x52" />
-               </font>
-               <textFill>
-                  <Color red="0.624" green="0.624" blue="0.624" fx:id="x62" />
-               </textFill>
-            </Label>
-         </children>
-      </GridPane>
-  </children>
-</fx:root>
+                                            </children>
+                                        </GridPane>
+                                    </children>
+                                </AnchorPane>
+                            </content>
+                        </ScrollPane>
+                    </items>
+                </SplitPane>
+                <Label fx:id="sheetNameLbl" alignment="TOP_CENTER" contentDisplay="CENTER" text="Sheet Name" textAlignment="CENTER" wrapText="false">
+                    <font>
+                        <Font name="System Bold" size="24.0" />
+                    </font>
+                    <textFill>
+                        <Color red="0.624" green="0.624" blue="0.624" />
+                    </textFill>
+                </Label>
+            </children>
+        </GridPane>
+    </children>
+</VBox>
