--- a/sheetCellClient/src/sheetShower/fxml/dynamicSheet/dynamicSheet.fxml
+++ b/sheetCellClient/src/sheetShower/fxml/dynamicSheet/dynamicSheet.fxml
@@ -3,4 +3,4 @@
 <?import javafx.scene.layout.FlowPane?>
 
 
-<FlowPane fx:id="dynamicSheet" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sheetShower.fxml.dynamicSheet.DynamicSheetController" stylesheets="@dynamic-sheet-style.css"/>
+<FlowPane fx:id="dynamicSheet" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" stylesheets="@dynamic-sheet-style.css" fx:controller="sheetShower.fxml.dynamicSheet.DynamicSheetController" xmlns:fx="http://javafx.com/fxml/1" />
