--- a/sheetCellClient/src/sheetShower/fxml/headline/headline.fxml
+++ b/sheetCellClient/src/sheetShower/fxml/headline/headline.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.effect.Blend?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<GridPane alignment="CENTER" prefHeight="157.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sheetShower.fxml.headline.HeadlineController">
+<GridPane alignment="CENTER" prefHeight="157.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sheetShower.fxml.headline.HeadlineController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="88.0" minWidth="10.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="162.0" minWidth="10.0" prefWidth="162.0" />
@@ -79,10 +72,15 @@
       </Label>
       <Label fx:id="isSheetUpdatedLbl" alignment="CENTER" prefHeight="48.0" prefWidth="179.0" text="current sheet is up to date" textOverrun="LEADING_ELLIPSIS" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1">
          <font>
-            <Font size="14.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
       </Label>
       <Button fx:id="updateSheetBtn" mnemonicParsing="false" text="Update sheet" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+      <Label id="OrgiginalValueLabel" fx:id="noWritingPermissioonLbl" alignment="CENTER" layoutX="222.0" layoutY="129.0" text="NO WRITING PERMISSIONS" textAlignment="CENTER" textFill="#ee0202" visible="false" GridPane.columnIndex="1" GridPane.columnSpan="2">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
    </children>
    <effect>
       <Blend />
